# opengl-learn

./: .gitmodules  CMakeLists.txt  def.h  main.cpp
.github/workflows/: main.yml
bilibili-learn/: CMakeLists.txt  README.md  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  texture.cpp  texture.h  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.hpp
bilibili-learn/res/: basic.glsl
bilibili-learn/shaders/: vertex.glsl
demo/: CMakeLists.txt  demo.cpp  glm.cpp
demo/shaders/: fragment.glsl
learn-opengl/: CMakeLists.txt
learn-opengl/coordinate-systems/: CMakeLists.txt  main.cpp  main2.cpp
learn-opengl/coordinate-systems/shaders/: fragment.glsl  fragment2.glsl  vertex.glsl  vertex2.glsl
learn-opengl/hello-triangle/: CMakeLists.txt  demo.cpp  exercise1.cpp  exercise2.cpp  exercise3.cpp  main.cpp
learn-opengl/hello-triangle/res/: fragment2.glsl
learn-opengl/shaders/: CMakeLists.txt  exercise2.cpp  main.cpp
learn-opengl/shaders/shaders/: exercise1-vertex.glsl  exercise2-vertex.glsl  exercise3-fragment.glsl  exercise3-vertex.glsl  fragment.glsl  vertex.glsl
learn-opengl/textures/: CMakeLists.txt  exercise4.cpp  main.cpp  triangle.cpp
learn-opengl/textures/shaders/: fragment-exercise1.glsl  fragment-exercise4.glsl  fragment.glsl  vertex.glsl
learn-opengl/transformations/: CMakeLists.txt  main.cpp
learn-opengl/transformations/shaders/: fragment-exercise2.glsl  fragment.glsl  vertex.glsl
lib/: CMakeLists.txt  exception.h  io.cpp  io.h  option.hpp  todo.cpp  todo.h  types.h
opengl-lib/: CMakeLists.txt  error_check.cpp  error_check.h  lib.cpp  lib.h  shader.cpp  shader.h  shader_location.cpp  shader_location.h
res/: basic.glsl  fragment.glsl  vertex.glsl
src/: def.h  exception.cpp  exception.h  gl_error_check.cpp  gl_error_check.h  index_buffer.cpp  index_buffer.h  io.cpp  io.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_location.cpp  shader_location.h  stb_image.h  texture.cpp  texture.h  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.hpp
src/learn-opengl/hello-triangle/: CMakeLists.txt  demo.cpp
src/lib/: CMakeLists.txt
